--- a/produtos.html
+++ b/produtos.html
@@ -5,6 +5,7 @@
         <title>Produtos - Barbershop Alura</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
         
     </head>
     <body>        
